# notebook4m

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
notebook4m/: __init__.py  __main__.py  cli.py
notebook4m/core/: __init__.py  llama_handler.py  repo_processor.py
notebook4m/utils/: __init__.py
tests/: __init__.py
